--- a/xsltforms/pom.xml
+++ b/xsltforms/pom.xml
@@ -32,7 +32,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 	<groupId>com.agencexml</groupId>
 	<artifactId>xsltforms</artifactId>
     <version>1.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>javascript</packaging>
 
 	<name>XSLTForms</name>
 	<url>http://www.agencexml.com/xsltforms</url>
@@ -55,6 +55,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
         <!-- Dependency Versioning -->
         
         <dojo.version>1.5.0</dojo.version>
+        <javascript.maven.plugin.version>1.0-alpha-1-SNAPSHOT</javascript.maven.plugin.version>
         <maven.assembly.plugin.version>2.2-beta-5</maven.assembly.plugin.version>
         <maven.xml.plugin.version>1.0-beta-3</maven.xml.plugin.version>
         <net.sf.saxon.version>8.7</net.sf.saxon.version>
@@ -99,7 +100,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
                         <transformationSet>
                             <dir>${cm.source.directory}</dir>
                             <includes>
-                                <include>*.js.xml</include>
+                                <!-- <include>*.js.xml</include> -->
                                 <include>*.css.xml</include>
                             </includes>
                             <excludes>
@@ -128,6 +129,16 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
                         <version>${net.sf.saxon.version}</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo.javascript</groupId>
+                <artifactId>javascript-maven-plugin</artifactId>
+                <version>${javascript.maven.plugin.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <libsDirectory>.</libsDirectory>
+                    <skip>true</skip>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
