--- a/xsltforms/pom.xml
+++ b/xsltforms/pom.xml
@@ -32,7 +32,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 	<groupId>com.agencexml</groupId>
 	<artifactId>xsltforms</artifactId>
     <version>1.0-SNAPSHOT</version>
-	<packaging>javascript</packaging>
+	<packaging>pom</packaging>
 
 	<name>XSLTForms</name>
 	<url>http://www.agencexml.com/xsltforms</url>
@@ -55,8 +55,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
         <!-- Dependency Versioning -->
         
         <dojo.version>1.5.0</dojo.version>
-        <javascript.maven.plugin.version>1.0-alpha-1-SNAPSHOT</javascript.maven.plugin.version>
-        <maven.assembly.plugin.version>2.2-beta-5</maven.assembly.plugin.version>
+        <maven.assembly.plugin.version>2.2</maven.assembly.plugin.version>
         <maven.xml.plugin.version>1.0-beta-3</maven.xml.plugin.version>
         <net.sf.saxon.version>8.7</net.sf.saxon.version>
     </properties>
@@ -66,6 +65,25 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
         <url>git:git@ssh.github.com/dthume/xsltforms.git</url>
         <developerConnection>git:git@ssh.github.com/dthume/xsltforms.git</developerConnection>  
     </scm>
+    
+    <!--
+        Need this to enable deploy to work at all (even with
+        -DaltDeploymentRepository)
+        
+        TODO: apply to sonatype for open source repository?
+    -->
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>libs-releases</name>
+            <url>todo://releases-repo</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>libs-snapshots</name>
+            <url>todo://snapshots-repo</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <pluginRepositories>
       <pluginRepository>
@@ -79,7 +97,6 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
     </pluginRepositories>
     
 	<build>
-		<finalName>xsltforms</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -148,19 +165,30 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
                 </dependencies>
             </plugin>
             <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${assembly.resources.dir}/scripts</outputDirectory>
+                            <resources>          
+                                <resource>
+                                    <directory>src/main/javascript</directory>
+                                </resource>
+                            </resources>              
+                        </configuration>            
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.0-beta-9</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo.javascript</groupId>
-                <artifactId>javascript-maven-plugin</artifactId>
-                <version>${javascript.maven.plugin.version}</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <libsDirectory>.</libsDirectory>
-                    <skip>true</skip>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -169,11 +197,13 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
                    <descriptors>
                      <descriptor>src/main/assembly/assembly.xml</descriptor>
                    </descriptors>
+                   <appendAssemblyId>false</appendAssemblyId>
+                   <attach>true</attach>
                 </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
-                        <goals><goal>assembly</goal></goals>
+                        <goals><goal>single</goal></goals>
                     </execution>
                 </executions>
             </plugin>
