--- a/xsltforms/pom.xml
+++ b/xsltforms/pom.xml
@@ -41,6 +41,8 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
         <assembly.descriptor.dir>src/main/assembly</assembly.descriptor.dir>
         <assembly.descriptor.file>assembly.xml</assembly.descriptor.file>
         <assembly.download.dir>${basedir}/dojoBuild</assembly.download.dir>
+        <assembly.output.dir>${project.build.directory}</assembly.output.dir>
+        <assembly.finalName>${project.build.finalName}</assembly.finalName>
         <assembly.resources.dir>${project.build.directory}/resources</assembly.resources.dir>
         <assembly.script.dir>${assembly.resources.dir}/scripts</assembly.script.dir>
         <cm.source.directory>${basedir}/src/main/cm</cm.source.directory>
@@ -201,6 +203,8 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
                    </descriptors>
                    <appendAssemblyId>false</appendAssemblyId>
                    <attach>true</attach>
+                   <outputDirectory>${assembly.output.dir}</outputDirectory>
+                   <finalName>${assembly.finalName}</finalName>
                 </configuration>
                 <executions>
                     <execution>
@@ -273,6 +277,18 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>directory</id>
+            <activation>
+                <property>
+                    <name>directory</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <assembly.descriptor.file>assembly-directory.xml</assembly.descriptor.file>
+            </properties>
         </profile>
     </profiles>
 </project>
